<package>
  <name>cl_giskard</name>
  <version>0.1.0</version>

  <description>
    A wrapper from giskard to lisp.
  </description>

  <author email="blandc@cs.uni-bremen.de">Mihai Pomarlan</author>
  <maintainer email="blandc@cs.uni-bremen.de">Mihai Pomarlan</maintainer>
  <license>BSD</license>

  <url type="website">http://open-ease.org</url>
  <url type="bugtracker">https://github.com/semroco/cl_giskard/issues</url>
  <url type="repository">https://github.com/semroco/cl_giskard</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>giskard_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cl_transforms_stamped</build_depend>
  <build_depend>actionlib_lisp</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>roslisp_utilities</build_depend>

  <run_depend>giskard_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cl_transforms_stamped</run_depend>
  <run_depend>actionlib_lisp</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>giskard</run_depend>
</package>
